S302T900-394 #time 2h 27m Implemented new APi endpoints for post and get and also changed tests ?implement ?testManual ?test ?pair[dbu59, jch401]
