# backend/src/main/java/org/seng302/controllers/ListingNotificationController.java
@@ -5,7 +5,7 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.seng302.models.*;
 import org.seng302.models.requests.ListingNotificationRequest;
-import org.seng302.repositories.BusinessRepository;
+import org.seng302.repositories.ListingLikeRepository;
 import org.seng302.repositories.ListingRepository;
 import org.seng302.repositories.ListingNotificationRepository;
 import org.seng302.repositories.UserRepository;
@@ -16,6 +16,7 @@ import org.springframework.web.bind.annotation.*;
 
 import javax.servlet.http.HttpSession;
 import java.util.List;
+import java.util.stream.Collectors;
 
 
 @RestController
@@ -24,72 +25,68 @@ public class ListingNotificationController {
   private static final Logger logger = LogManager.getLogger(ListingNotificationController.class.getName());
 
   @Autowired
-  private BusinessRepository businessRepository;
-
-  @Autowired
   private ListingRepository listingRepository;
 
   @Autowired
   private UserRepository userRepository;
 
   @Autowired
+  private ListingLikeRepository listingLikeRepository;
+
+  @Autowired
   private ListingNotificationRepository listingNotificationRepository;
 
   /**
    * Endpoint for creating a notification for a listing that's just been purchased.
-   * @param businessId ID of the business owning the listing
    * @param listingId ID of the listing
-   * @param userId ID of the user
-   * @param request json body with the userId, listingId, message and notification status
    * @return 201 if successful, 406 if listing or receiver are null
    */
-  @PostMapping("/businesses/{businessId}/listings/{listingId}/users/{userId}/notify")
-  public ResponseEntity<String> addNotificationToListing(@PathVariable("businessId") long businessId,
-                                                         @PathVariable("listingId") long listingId,
-                                                         @PathVariable("userId") long userId,
-                                                         @RequestBody ListingNotificationRequest request) {
-    User receiver = userRepository.findUserById(userId);
+  @PostMapping("/listings/{listingId}/notify")
+  public ResponseEntity<String> addNotificationToListing(@PathVariable("listingId") long listingId,
+                                                         HttpSession session) {
+    User currentUser = (User) session.getAttribute(User.USER_SESSION_ATTRIBUTE);
     Listing listing = listingRepository.findListingById(listingId);
-    Business business = businessRepository.findBusinessById(businessId);
-    NotificationStatus status = request.getStatus();
-    if (listing == null || receiver == null || business == null) {
-      logger.error("Listing, receiver or business invalid");
+    NotificationStatus status = NotificationStatus.BOUGHT;
+    if (currentUser == null) {
+      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+    }
+    if (listing == null) {
       return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).build();
     }
-    ListingNotification listingNotification = new ListingNotification(receiver, listing, status);
+    List<ListingLike> userLikes = listingLikeRepository.findListingLikeByListingId(listingId);
+    List<User> receivers = userLikes.stream().map(ListingLike::getUser).collect(Collectors.toList());
+    for (User receiver : receivers) {
+      ListingNotification listingNotification = new ListingNotification(receiver, listing, status);
+      listingNotificationRepository.save(listingNotification);
+    }
+    ListingNotification listingNotification = new ListingNotification(currentUser, listing, status);
     listingNotificationRepository.save(listingNotification);
-
     return ResponseEntity.status(HttpStatus.CREATED).build();
   }
 
   /**
    * Endpoint for retrieving a list of a user's listing notifications
-   * @param businessId ID of the business owning the listing
-   * @param listingId ID of the listing
    * @param userId ID of the user
    * @param session the current active user session
    * @return 200 if successful with a list of listing notifications
    * @throws JsonProcessingException when json mapping object to a json string fails unexpectedly
    */
-  @GetMapping("/businesses/{businessId}/listings/{listingId}/users/{userId}/notify")
-  public ResponseEntity<List<ListingNotification>> getListingNotifications(@PathVariable("businessId") long businessId,
-                                                                           @PathVariable("listingId") long listingId,
-                                                                           @PathVariable("userId") long userId,
+  @GetMapping("users/{userId}/notifications")
+  public ResponseEntity<List<ListingNotification>> getUserListingNotifications(@PathVariable("userId") long userId,
                                                                            HttpSession session) throws JsonProcessingException {
     User currentUser = (User) session.getAttribute(User.USER_SESSION_ATTRIBUTE);
-    Business business = businessRepository.findBusinessById(businessId);
     User user = userRepository.findUserById(userId);
-    Listing listing = listingRepository.findListingById(listingId);
 
-    if (currentUser == null) {
-      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
-    }
-
-    if (listing == null || user == null || business == null) {
+    if (user == null) {
       return ResponseEntity.status(HttpStatus.NOT_ACCEPTABLE).build();
     }
 
+    if (currentUser.getId() != user.getId()) {
+      return ResponseEntity.status(HttpStatus.UNAUTHORIZED).build();
+    }
+
     List<ListingNotification> listingNotifications = listingNotificationRepository.findListingNotificationsByUserId(userId);
+    System.out.println(listingNotifications);
     return ResponseEntity.status(HttpStatus.OK).body(listingNotifications);
   }
 }
